<resources>
    <string name="app_name">TranslateIt</string>
    <string name="Yandex_Api">trnsl.1.1.20200208T095225Z.7b3d47dc71ae6347.16d71d4281b1b61d56f6b18ed7752dc5058433c3</string>
    <string name="edNumber_hint">Enter your number</string>
    <string name="button_register">Go</string>
    <string name="edNumber_error">Enter a valid number</string>
    <string name="intent_number">number</string>
    <string name="otp_message">Enter six digits sent to you</string>
    <string name="dbName_users">Users</string>
    <string name="butDone">Done</string>
    <string name="tvLanguage">Choose your language</string>
    <string name="hintUserName">Enter your Username</string>
    <string name="tvComleteProf">Complete your profile</string>
    <string name="tvError">No internet please ensure you are connect to a network</string>
    <string name="translate_it">Translate it</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="no_internet_connection">No internet</string>
    <string name="hint_text">Speech</string>
    <string name="new_translate">Translate</string>
    <string name="language_pack_missing">Language is missing</string>
    <string name="language_not_supported">Languag not supported</string>
    <string name="select_matching_text">Select Matching Text</string>
    <string name="process_tts">Process text</string>
    <string name="speech_prompt">Get speech</string>
    <string name="edit_text">Change your username</string>
    <string name="but_submit">Submit</string>
    <string name="but_cancel">Cancel</string>
</resources>
