<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CompleteReg">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:cardCornerRadius="6dp"
        android:elevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <!--text view login and view design-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorGreen"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:textColor="@color/colorYellow"
                    android:text="@string/tvComleteProf"
                    android:textSize="18sp"
                    android:textStyle="bold"



                    />



            </RelativeLayout>
            <!--edit text userName design-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp"

                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorCustomGrey"
                    >
                    <EditText
                        android:id="@+id/edUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintUserName"
                        android:textSize="13sp"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:background="@drawable/bg_edit_selector"
                        android:paddingBottom="2dp"

                        />

                </com.google.android.material.textfield.TextInputLayout>




            </LinearLayout>
            <!--TextView Spinner Language-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp"

                >
                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvLanguage"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorYellow"

                    />

                <Spinner
                    android:layout_toRightOf="@id/tvLanguage"
                    android:id="@+id/spLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />





            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_marginTop="25dp"

                >
                <Button
                    android:id="@+id/butComplete"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:textColor="@color/colorCustomGrey"
                    android:background="@drawable/bg_but_shape"
                    android:text="@string/butDone"
                    android:stateListAnimator="@drawable/state_list_animator_z"




                    />


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <View
        android:id="@+id/netErrorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>




</RelativeLayout>